Use SegmentScope.global()